--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
   color: #444;
   line-height: 1.9;
   background-color: #f3f3f3;
+  overflow-x: hidden;
 }
 
 .section {
@@ -620,7 +621,7 @@ h4 {
   opacity: 0;
 }
 
-/* .cookie-message {
+.cookie-message {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -629,4 +630,4 @@ h4 {
   color: #bbb;
   font-size: 1.5rem;
   font-weight: 400;
-} */
+}
