scrollbar added, not working in mozilla

--- a/style.css
+++ b/style.css
@@ -12,6 +12,19 @@
   --gradient-secondary: linear-gradient(to top left, #d35e2c, #ff7a42);
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgb(55, 56, 61);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #24cbc8;
+  height: 10%;
+}
+
 * {
   margin: 0;
   padding: 0;
