--- a/style.css
+++ b/style.css
@@ -698,7 +698,7 @@ h4 {
   left: 0;
   z-index: 99;
   background-color: #37383d;
-  width: 100vw;
+  width: 100%;
   height: 12rem;
   display: flex;
   align-items: center;
