--- a/style.css
+++ b/style.css
@@ -859,4 +859,10 @@ h4 {
   .slide {
     height: 90rem;
   }
+
+  .modal {
+    max-width: 50rem;
+    background-color: #f3f3f3;
+    padding: 6rem 2rem;
+  }
 }
