--- a/style.css
+++ b/style.css
@@ -747,9 +747,7 @@ h4 {
   .nav__links.nav__open {
     display: flex;
     flex-direction: column;
-    background-color: rgba(255, 255, 255, 0.85);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
+    background-color: rgb(255, 255, 255);
     position: absolute;
     height: 100vh;
     width: 100vw;
